<resources>
    <string name="app_name">SnapHealth</string>
    <string name="you_drank_this_many_cups_of_water">You drank this many cups of water</string>
    <string name="_1_water">+1 Water</string>
    <string name="_0">0</string>
    <string name="_100">100</string>
    <string name="five_mounthfuls">FIVE MOUNTHFULS</string>
    <string name="a_mug">A MUG</string>
    <string name="large_gulp">LARGE GULP</string>
    <string name="small_gulp">SMALL GULP</string>
    <string name="reset">Reset</string>
    <string name="five_mouthfuls">Five Mouthfuls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="sleep_details">Sleep Details</string>
    <string name="to_hydration">to Hydration</string>
    <string name="to_food">To Food</string>
    <string name="to_sleep">To Sleep</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="activity_level">Activity Level</string>
    <string name="goal">Goal</string>
    <string name="diet_type">Diet Type</string>
    <string name="calculate">Calculate</string>
    <string name="click_here">Click here</string>
    <string name="you_slept_in">You Slept in:</string>
    <string name="switch_to_sleep">Switch to Sleep</string>
    <string name="this_is_sleep_ui">This is Sleep UI</string>
    <string name="textview">TextView</string>
    <string name="view_your_sleep">View Your Sleep</string>
</resources>