<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hydration"
    android:background="#E0F7FA">

    <TextView
        android:id="@+id/HowMuch_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Amount of Water Left You Need For Today"
        android:textColor="#01579B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/WaterCount_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/WaterCount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="2000"
        android:textColor="#01579B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HowMuch_textView" />

    <Button
        android:id="@+id/clear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:background="#B3E5FC"
        android:textColor="#01579B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:textSize="20sp"
        android:textColor="#01579B"
        app:layout_constraintBottom_toTopOf="@+id/HowMuch_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/small_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="#B3E5FC"
        android:text="@string/small_gulp"
        android:textColor="#01579B"
        app:layout_constraintEnd_toStartOf="@+id/large_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WaterCount_textView"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/large_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="#B3E5FC"
        android:text="@string/large_gulp"
        android:textColor="#01579B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/small_button"
        app:layout_constraintTop_toBottomOf="@+id/WaterCount_textView"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="#B3E5FC"
        android:text="@string/five_mouthfuls"
        android:textColor="#01579B"
        app:layout_constraintEnd_toStartOf="@+id/mug_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/small_button"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/mug_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="#B3E5FC"
        android:text="@string/a_mug"
        android:textColor="#01579B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toBottomOf="@+id/large_button"
        app:layout_constraintWidth_percent="0.4" />

    <!--    <Button-->
<!--        android:id="@+id/back_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="400dp"-->
<!--        android:background="#B3E5FC"-->
<!--        android:text="Back"-->
<!--        android:textColor="#01579B"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/clear_text"-->
<!--        app:layout_constraintHorizontal_bias="0.216"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/five_button" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
