<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context=".FoodRecommendation">


    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="178dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/activity_level"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/white_spinner"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="178dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/diet_type"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/white_spinner"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="165dp"
        android:layout_height="281dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/calculate"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:gravity="center"
            android:padding="16dp"
            android:text="Your Calories Intake"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="top|start"
            android:gravity="center"
            android:padding="16dp"
            android:text="Per Day is"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="top|start"
            android:gravity="center"
            android:padding="16dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </FrameLayout>

    <Button
        android:id="@+id/textView9"
        android:layout_width="178dp"
        android:layout_height="123dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/meals_small"
        android:padding="16dp"
        android:paddingBottom="16dp"
        android:text="Prepare your meals tomorrow"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toEndOf="@+id/frameLayout3">

    </Button>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="178dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/goal"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/white_spinner"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/food_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />


</androidx.constraintlayout.widget.ConstraintLayout>